# goit-pycore-hw-08

./: .dockerignore  .gitignore  Contact.py  Dockerfile  Pipfile  README.md  app.py  doc.py  main.py  pyproject.toml  start.sh
