[project]
name = "poetry evn use 3-11"
version = "poetry add -r requirements.txt"
description = "CLI застосунок \"Персональний помічник\" для управління контактами та днями народження"
authors = [
    {name = "Anastasiia Chaika",email = "annastasnika@icloud.com "}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "poetry evn use 3"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
